--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ REACT_APP_BASE_URL="http://localhost:3000/"
 
 # Firebase Key
 REACT_APP_API_KEY="AIzaSyDlfWBqi107dSxmOaTBD5ZqcSm96A35I-o"
-REACT_APP_DOMAIN="absensi-starcon.firebaseapp.com"
-REACT_APP_PROJECT_ID="absensi-starcon"
-REACT_APP_BUCKET="absensi-starcon.appspot.com"
+REACT_APP_DOMAIN="medic-starcon.firebaseapp.com"
+REACT_APP_PROJECT_ID="medic-starcon"
+REACT_APP_BUCKET="medic-starcon.appspot.com"
 REACT_APP_MESSAGE_SENDER_ID="945872606545"
 REACT_APP_APP_ID="1:945872606545:web:c3701225a37d4782f8ef70"
 REACT_APP_SECRET_PAIR_KEY="BGRrrzsSG3-owJYQFzdPrSBDrTFgl8VHjS2PuZHtWw362l1ZDHknl4fNelmqb0wds-oisMXMvcELF70r7OiCB3E"
